--- a/doc-traefik.yml
+++ b/doc-traefik.yml
@@ -3,7 +3,7 @@ version: "3.3"
 services:
   reverse-proxy:
     image: "traefik:v2.3"
-    container_name: traefik
+    container_name: ${NAME}
     restart: always
     ports:
       - "80:80"     # The HTTP port                                                                       
@@ -16,7 +16,7 @@ services:
       - '995:995'  #  POP3S - encrypted POP3 since connections
     command:
       #- --api.insecure
-      - --certificatesresolvers.mydnschallenge.acme.email=admin@123menu.cl
+      - --certificatesresolvers.mydnschallenge.acme.email=admin@${DOMAIN}
       - --certificatesresolvers.mydnschallenge.acme.storage=/letsencrypt/acme.json
       - --certificatesresolvers.mydnschallenge.acme.tlschallenge=true
       - "--entrypoints.smtp.address=:25"
@@ -27,19 +27,19 @@ services:
       - "--entrypoints.mysql.address=:3306"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events       
-      - "/var/ftp/reverse-proxy/traefik.toml:/etc/traefik/traefik.toml"
-      - "/var/ftp/reverse-proxy/config:/config"
-      - "/var/ftp/reverse-proxy/letsencrypt:/letsencrypt"
-      - "/var/ftp/reverse-proxy/logs:/logs"
+      - "${RUTA}/traefik.toml:/etc/${NAME}/traefik.toml"
+      - "${RUTA}/config:/config"
+      - "${RUTA}/letsencrypt:/letsencrypt"
+      - "${RUTA}/logs:/logs"
     labels:
-      - "traefik.http.routers.api.rule=Host(`reverseproxy.123menu.cl`)"
+      - "traefik.http.routers.api.rule=Host(`reverseproxy.${DOMAIN}`)"
       - "traefik.http.routers.api.service=api@internal"
       - "traefik.http.routers.api.entrypoints=https"
       - "traefik.http.routers.api.tls.certresolver=mydnschallenge"
       - "traefik.http.routers.api.middlewares=auth"              
       - "traefik.http.middlewares.auth.basicauth.users=admin:$$apr1$$jZzcoo4U$$sZgbuA8vu5niTVIyx4oub1"
       - "traefik.http.routers.nas.entrypoints=https"
-      - "traefik.http.routers.nas.rule=Host(`nas.123menu.cl`)" # local machine
+      - "traefik.http.routers.nas.rule=Host(`nas.${DOMAIN}`)" # local machine
       - "traefik.http.routers.nas.service=nas@file"
       - "traefik.http.routers.nas.tls.certresolver=mydnschallenge"
       # global redirect to https
@@ -65,7 +65,7 @@ services:
     depends_on:
       - reverse-proxy
     volumes:
-      - "/var/ftp/reverse-proxy/letsencrypt:/app/data"
+      - "${RUTA}/letsencrypt:/app/data"
     labels:
       - "traefik.enable=false"
     deploy:
