--- a/doc-traefik.yml
+++ b/doc-traefik.yml
@@ -24,8 +24,9 @@ services:
       - "traefik.http.routers.api.service=api@internal"
       - "traefik.http.routers.api.entrypoints=https"
       - "traefik.http.routers.api.tls.certresolver=mydnschallenge"
-      - "traefik.http.routers.api.middlewares=auth"              
-      - "traefik.http.middlewares.auth.basicauth.users=admin:$$apr1$$jZzcoo4U$$sZgbuA8vu5niTVIyx4oub1"
+      - "traefik.http.routers.api.middlewares=auth"         
+      #For the creation of the user an password user the command: "echo $(htpasswd -nb user "password") | sed -e s/\\$/\\$\\$/g"
+      - "traefik.http.middlewares.auth.basicauth.users=#########"
       - "traefik.http.routers.nas.entrypoints=https"
       - "traefik.http.routers.nas.rule=Host(`nas.${DOMAIN}`)" # local machine
       - "traefik.http.routers.nas.service=nas@file"
