--- a/traefik.toml
+++ b/traefik.toml
@@ -8,6 +8,8 @@
         address = ":80"
     [entryPoints.https]
         address = ":443"
+    [entryPoints.mysql]
+        address = ":3306"
 
 [api]
 
